welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: '=' expected but ';' found.
  var derniereCase=len(nums)-1
^