welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  var rep=-1
  var derniereCase=len(nums)-1
  for (i <- 0 to derniereCase){
    if (nums(i)==lookingFor){rep=i}
  }
  
  
  
  
  return rep
}